# ordinary

./: Cargo.toml
.github/workflows/: build.yaml
crates/bar/: Cargo.toml  bar.rs  tray.rs
crates/ipc/: Cargo.toml  ipc.rs
crates/ipc-hyprland/: Cargo.toml  hyprland.rs
crates/ipc-niri/: Cargo.toml  niri.rs
crates/ipc-river/: Cargo.toml  river.rs
crates/ipc-zbus/: Cargo.toml  zbus.rs
crates/launcher/: Cargo.toml  launcher.rs  text_input.rs
crates/system/: Cargo.toml  battery.rs  clock.rs
crates/theme/: Cargo.toml  theme.rs
crates/xembed-bridge/: Cargo.toml  xembed-bridge.rs
