[package]
name = "ipc-river"
version.workspace = true
edition.workspace = true

[lib]
path = "river.rs"

[dependencies]
gpui.workspace = true
log.workspace = true
anyhow.workspace = true
ipc = { path = "../ipc" }
rustix = "1.1.3"
wayland-backend = "0.3.12"
wayland-client = "0.31.12"
wayland-scanner = "0.31.8"
